# ASHEN-SHELL

./: .dockerignore  .env.example  .gitignore  AGENCY_CAPABILITY_MATRIX.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRACTIFY_AUDIT_RESULT.md  CONTRIBUTING.md  GOVERNANCE_IMPLEMENTATION_COMPLETE.md  GOVERNANCE_REPAIRS_COMPLETED.md  IMPLEMENTATION_RESULT.md  JOURNEY_FROM_PHASE4_TO_PHASE5.md  Makefile  ORIGINAL_MVP_GOALS_vs_CURRENT_FOCUS.md  PHASE_4_COMPLETION_SUMMARY.md  PHASE_5_EVALUATOR_RECRUITMENT_PACKAGE.md  PHASE_5_INFRASTRUCTURE_CHECKLIST.md  PHASE_5_LAUNCH_BRIEFING.md  PHASE_5_SCENARIO_SPECIFICATIONS.md  PHASE_5_STATUS_SUMMARY.txt  PHASE_5_TASK_EXECUTION_PLAN.md  PHASE_5_WEEK1_EXECUTIVE_SUMMARY.md  PHASE_6_AND_7_INTEGRATION_ROADMAP.md  Plan.md  Plan_Phase5.md  Plan_Phase6_BranchingArchitecture.md  Plan_Phase7_LargeScaleDeployment.md  Play-Service-Runtime-EN.md  Play-Service-Runtime.md  README.md  REPAIR_SUMMARY.md  RUNTIME_AGENCY_REPAIR_BACKLOG.md  RUNTIME_AGENCY_REPAIR_TASK.md  Readme.md  SUITE_VALIDATION_RESULT.md  TESTING_REPORT.md  TEST_TASK.md  Task_Analytics_Phase.md  VERIFICATION_REPORT_WAVE_1_2.md  (+32 more)
Backend/: run.py
world_of_shadows_mvp_v24_lean_finishable/mvp/reference_scaffold/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
world_of_shadows_mvp_v24_lean_finishable/mvp/reference_scaffold/runtime_data/: wos_mvp.sqlite3
world_of_shadows_mvp_v24_lean_finishable/mvp/reference_scaffold/tests/: conftest.py  test_api_runtime.py  test_consolidation.py  test_effects_and_transformations.py  test_identity_and_slotting.py  test_imports.py  test_incidents.py  (+1 more)
(+2784 files in other folders)
