[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wos-mvp-v21"
version = "0.21.1"
description = "World of Shadows MVP v21 integrated runnable reference scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "httpx>=0.27.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.scripts]
wos-mvp-api = "wos_mvp.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["wos_mvp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
